# Project_SOML_Karim_Paula

./: .gitignore  LICENSE  README.md  pyproject.toml
carbike_classification/: __init__.py  app.py  dataset.py  evaluate_model.py  model.py  plot_training_curves.py  preprocess.py  train.py
docs/: carbike_classification.html  dataset.html  evaluate_model.html  index.html  model.html  myproject.html  plot_training_curves.html  search.js  train.html
docs/carbike_classification/: app.html  dataset.html  evaluate_model.html  model.html  plot_training_curves.html  preprocess.html  train.html
docs/myproject/: dataset.html  evaluate_model.html  model.html  plot_training_curves.html  train.html
myproject/: __init__.py  app.py  dataset.py  evaluate_model.py  model.py  plot_training_curves.py  preprocess.py  train.py
notebooks/: data_exploration.ipynb
reports/: report_performance_visualizations.odt
